# papel

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.app.yml  docker-compose.core.yml  docker-compose.monitoring.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  setup.cfg  sonar-project.properties
app/: config.py  main.py  pyproject.toml  worker.py
app/src/db/: database.py
app/src/libs/: main_lib.py  test_lib.py
app/src/routers/: test_endpoints.py
app/src/tasks/: main_tasks.py
app/test/: conftest.py  test_endpoint_checks.py
app/test/fixtures/: test_check_celery_expected_results.json  test_load_db_expected_results.json  test_read_db_expected_results.json
app/tests/: test_endpoint_checks.py
dags/: dummy_dag.py  dummy_dag_2.py  dummy_taskflow_api.py
docker-entrypoint-initdb.d/: create_second_db.sh  init-mongo.js  init-mongo.sh
logs/scheduler/: latest
notes/: docker-compose_orig.yaml  docker_cheatsheet.txt
setup/app/: .env
setup/nginx/: app_docker.conf  certificate.conf  monitor_docker.conf  template.conf
setup/pgadmin/: .env  servers.json
setup/postgres/: .env  servers.json
setup/rabbitmq/: definitions.json  definitions.json.example
setup/sonar-scanner/: Dockerfile
