[tool.poetry]
name = "papel-dev"
version = "0.1.0"
description = "Papel dev environment."
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "*"
celery = "^5.1"
typing = "^3.7"
# TODO: check jinja update
jinja2 = "^3.0"
requests = "2.26"
psycopg2-binary = "^2.9"
python-dotenv = "^0.19"
numpy = "^1.21"
aiofiles = "^0.7"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pylint = "*"
